# pkg/infrastructure/res/auth_res.go
@@ -1,11 +1,0 @@
-package res
-
-type LoginRes struct {
-	AccessToken  string `json:"accessToken"`
-	RefreshToken string `json:"refreshToken"`
-}
-
-type RefreshTokenRes struct {
-	AccessToken  string `json:"accessToken"`
-	RefreshToken string `json:"refreshToken"`
-}
